#Tests for CommandLine Classes

add_executable(CommandOption_T CommandOption_T.cpp)
target_link_libraries(CommandOption_T gnsstk)
add_test(CommandLine_CommandOption CommandOption_T)

add_executable(CommandOptionParser_T CommandOptionParser_T.cpp)
target_link_libraries(CommandOptionParser_T gnsstk)
add_test(CommandLine_CommandOptionParser CommandOptionParser_T)

add_executable(CommandOptionWithCommonTimeArg_T CommandOptionWithCommonTimeArg_T.cpp)
target_link_libraries(CommandOptionWithCommonTimeArg_T gnsstk)
add_test(CommandLine_CommandOptionWithCommonTimeArg CommandOptionWithCommonTimeArg_T)
